@@ -2,6 +2,7 @@
 power-armor-mk3=Power Armor Mk3
 power-armor-mk4=Power Armor Mk4
 power-armor-mk5=Power Armor Mk5
+personal-cannon-defense-mk2-remote=Personal Cannon Defense Mk2 Remote
 
 [equipment-name]
 fusion-reactor-equipment-mk2=Portal Fusion Reactor Mk2
