@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
-Date: ????
+Date: 2020-11-09
   Changes:
+    - Made the MK2 Personal Canon Device manual
+    - Added a Remote Control for the Personal Canon Device
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2020-11-08
